==============
lxml changelog
==============

2.2.2 (2009-10-??)
==================

Features added
--------------

Bugs fixed
----------

* Modifying trees that contain parsed entity references could result
  in an infinite loop.

* ObjectifiedElement.__setattr__ created an empty-string child element when the
  attribute value was rejected as a non-unicode/non-ascii string

* Syntax errors in ``lxml.cssselect`` could result in misleading error
  messages.

* Invalid syntax in CSS expressions could lead to an infinite loop in
  the parser of ``lxml.cssselect``.

* CSS special character escapes were not properly handled in
  ``lxml.cssselect``.

* CSS Unicode escapes were not properly decoded in ``lxml.cssselect``.

* Select options in HTML forms that had no explicit ``value``
  attribute were not handled correctly.  The HTML standard dictates
  that their value is defined by their text content.  This is now
  supported by lxml.html.

* XPath raised a TypeError when finding CDATA sections.  This is now
  fully supported.

* Calling ``help(lxml.objectify)`` didn't work at the prompt.

* The ``ElementMaker`` in lxml.objectify no longer defines the default
  namespaces when annotation is disabled.

* Feed parser failed to honout the 'recover' option on parse errors.

* Diverting the error logging to Python's logging system was broken.

Other changes
-------------


2.2.2 (2009-06-21)
==================

Features added
--------------

* New helper functions ``strip_attributes()``, ``strip_elements()``,
  ``strip_tags()`` in lxml.etree to remove attributes/subtrees/tags
  from a subtree.

Bugs fixed
----------

* Namespace cleanup on subtree insertions could result in missing
  namespace declarations (and potentially crashes) if the element
  defining a namespace was deleted and the namespace was not used by
  the top element of the inserted subtree but only in deeper subtrees.

* Raising an exception from a parser target callback didn't always
  terminate the parser.
